--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "antv-cron",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "author": "zhangyq",
   "description": "A cron editor of easy-to-use, base on Vue",
   "keywords": [
@@ -20,7 +20,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lib": "vue-cli-service build --target lib --name antv-cron --dest lib packages/index.js"
+    "lib": "vue-cli-service build --target lib --name antv-cron --dest lib packages/index.js",
+    "analyzer": "cross-env analyzer=true vue-cli-service build "
   },
   "dependencies": {
     "ant-design-vue": "^1.7.2",
@@ -34,9 +35,13 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "lodash-webpack-plugin": "^0.11.6",
+    "vue-template-compiler": "^2.6.14",
+    "webpack-bundle-analyzer": "^4.8.0"
   },
   "eslintConfig": {
     "root": true,
